Bug 344013 - Icons on home screen are not shown
Summary: Icons on home screen are not shown
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Christian David
URL:
Keywords:
: 348492 362084 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-02-10 18:33 UTC by Christian David
Modified: 2017-07-01 12:11 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
Screenshot of error (17.05 KB, image/png)
2015-02-10 18:34 UTC, Christian David
Details
Missing skip button (104.45 KB, image/png)
2015-04-13 06:00 UTC, Dimitrios Glentadakis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christian David 2015-02-10 18:33:22 UTC
The icons for the "Enter" and "Skip" buttons in the Payments section of the home screen are just placeholders.

This is caused by
        KIconLoader::global()->loadIcon(KMyMoneyGlobalSettings::enterScheduleIcon(), KIconLoader::Small, KIconLoader::SizeSmall, KIconLoader::DefaultState, QStringList(), &pathEnter, false);
        KIconLoader::global()->loadIcon(QString("media-seek-forward"), KIconLoader::Small, KIconLoader::SizeSmall, KIconLoader::DefaultState, QStringList(), &pathSkip);

in khomeview.cpp. The returned path on my system points to a (valid and existing) svgz file. The HTML renderer is obliviously not able to display that format. In IRC I was told that the same issue happens on another Linux as well (I think Gentoo).

Reproducible: Always
Comment 1 Christian David 2015-02-10 18:34:17 UTC
Created attachment 91012 [details]
Screenshot of error
Comment 2 Cristian Oneț 2015-04-06 08:10:01 UTC
This report

https://forum.kde.org/viewtopic.php?f=69&t=125686&sid=11087fabecb807b1a6d59845e4142806

might be related. I didn't notice anything like this on Gentoo, I have to check the return values of those function on my system.
Comment 3 Dimitrios Glentadakis 2015-04-13 06:00:04 UTC
Created attachment 92003 [details]
Missing skip button

Screenshot with the missing skip transaction button
kmymoney 4.7.1
KDE 4.14.5
Comment 4 Gianfranco L'Abbate 2015-04-27 07:48:13 UTC
Same problem with Kubuntu 15.04
Comment 5 Dimitrios Glentadakis 2015-05-18 18:57:08 UTC
I have to say that since an update (i think before 1-2 weeks) i lost also the other icon beside the "Skip', the "Enter".
Also i remarked that i lost all the icons of the Introduction page of konqueror
Comment 6 Dimitrios Glentadakis 2015-05-27 03:44:04 UTC
It is ok after disabling the adblock filter in konqueror
Comment 7 Christian David 2015-05-31 12:57:35 UTC
*** Bug 348492 has been marked as a duplicate of this bug. ***
Comment 8 sigma343 2015-05-31 23:27:21 UTC
disabling adblock did not work for me - konqueror and kmymoney still do not show icons
Comment 9 Christian David 2015-06-01 08:18:34 UTC
(In reply to Dimitrios Glentadakis from comment #6)
> It is ok after disabling the adblock filter in konqueror

I didn't try to disable adblock but I am sure this is not the issue. Maybe there was another change happening at the same time by chance.
Comment 10 sigma343 2015-06-02 10:57:44 UTC
I think this bug may have the solution - https://bugs.kde.org/show_bug.cgi?id=291480

but who can update / check the kmymoney/views/khomeview.cpp file as stated?
Comment 11 Alvaro Soliverez 2015-06-05 11:01:48 UTC
(In reply to Sirshen from comment #10)
> I think this bug may have the solution -
> https://bugs.kde.org/show_bug.cgi?id=291480
> 
> but who can update / check the kmymoney/views/khomeview.cpp file as stated?

That bug is closed and the fixes are already submitted. This bug indeed seems a duplicate of 291480
Comment 12 sigma343 2015-06-05 11:16:37 UTC
I don't think it is a duplicate, as even with that additional source code (solution to 291480) this bug still prevails. it is even evident in the konqueror browser default home page (icons not displayed) so clearly there is still a problem which needs to be resolved.
Comment 13 Alvaro Soliverez 2015-06-05 11:46:04 UTC
Then the problem is somewhere in the KHTML component in KDE core. KMyMoney relies on the same part used by Konqueror to display HTML pages.
Most likely, when your problem in Konqueror is solved, this issue will sort itself out as well
Comment 14 sigma343 2015-06-05 11:51:58 UTC
Thats exactly what i was thinking - any idea how we can get the devs to fix khtml? as i know konqueror is not really used as much as it was previously due to the introduction of dolphin.
Comment 15 sigma343 2015-06-27 20:15:00 UTC
Any progress on this one chaps?
Comment 16 Christian David 2015-06-28 15:32:16 UTC
Git commit e8d3a413e9f184bdf2aced1c1c2ffdc4f4d9e5fd by Christian Dávid.
Committed on 28/06/2015 at 15:31.
Pushed by christiand into branch 'master'.

Convert icons to data URI in KHomeView

The path of icons is no longer used because it could point to an
unsupported image format. Instead the QPixmap is loaded and converted
to an data URI.
FIXED-IN: 4.8

M  +24   -11   kmymoney/views/khomeview.cpp

http://commits.kde.org/kmymoney/e8d3a413e9f184bdf2aced1c1c2ffdc4f4d9e5fd
Comment 17 Christian David 2016-04-24 10:41:53 UTC
*** Bug 362084 has been marked as a duplicate of this bug. ***
Comment 18 Joe 2016-09-17 19:10:16 UTC
Just want to add that I fixed this issue by adding the oxygen theme icons package, after-wards all was good to go.

My 5 cents.