Convert icons to data URI in KHomeView

The path of icons is no longer used because it could point to an
unsupported image format. Instead the QPixmap is loaded and converted
to an data URI.

BUG: 344013
FIXED-IN: 4.8